--- a/package.json
+++ b/package.json
@@ -2,37 +2,37 @@
   "name": "livijukufrontApp",
   "version": "1.3.0-SNAPSHOT",
   "dependencies": {
-    "angular": "^1.4.7",
-    "angular-animate": "^1.4.7",
+    "angular": "^1.4.8",
+    "angular-animate": "^1.4.8",
     "angular-bootstrap-show-errors": "~2.3.0",
     "angular-elastic": "^2.5.0",
-    "angular-i18n": "^1.4.7",
+    "angular-i18n": "^1.4.8",
     "angular-loading-bar": "^0.8.0",
-    "angular-nvd3": "^1.0.4",
-    "angular-resource": "^1.4.7",
-    "angular-route": "^1.4.7",
+    "angular-nvd3": "1.0.5",
+    "angular-resource": "^1.4.8",
+    "angular-route": "^1.4.8",
     "angular-sanitize": "^1.4.8",
-    "angular-smart-table": "^2.1.4",
-    "angular-toastr": "^1.5.0",
+    "angular-smart-table": "^2.1.6",
+    "angular-toastr": "^1.6.0",
     "angular-ui-bootstrap": "^0.14.3",
     "angular-ui-router": "^0.2.15",
-    "angular-ui-validate": "^1.2.1",
-    "bluebird": "^3.0.5",
-    "bootstrap": "^3.3.5",
+    "angular-ui-validate": "^1.2.2",
+    "bluebird": "^3.1.1",
+    "bootstrap": "^3.3.6",
     "d3": "3.5.6",
-    "es5-shim": "^4.2.0",
+    "es5-shim": "^4.4.1",
     "iban": "0.0.6",
     "jquery": "^2.1.4",
-    "jsdom": "^7.0.2",
+    "jsdom": "^7.2.1",
     "lodash": "^3.10.1",
     "ng-csv": "^0.3.6",
     "ng-currency": "solita/ng-currency#v0.8.x",
-    "ng-file-upload": "^8.0.6",
-    "nvd3": "^1.8.1"
+    "ng-file-upload": "8.0.6",
+    "nvd3": "1.8.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.3",
-    "angular-scenario": "1.4.7",
+    "angular-scenario": "1.4.8",
     "babelify": "^6.4.0",
     "browser-sync": "^2.7.1",
     "browserify": "^12.0.1",
