--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "livijukufrontApp",
-  "version": "1.3.1",
+  "version": "1.4.0-SNAPSHOT",
   "dependencies": {
     "angular": "^1.4.8",
     "angular-animate": "^1.4.8",
