--- a/package.json
+++ b/package.json
@@ -31,14 +31,16 @@
     "nvd3": "1.8.2"
   },
   "devDependencies": {
-    "angular-mocks": "~1.4.3",
-    "angular-scenario": "1.4.8",
-    "babelify": "^6.4.0",
+    "angular-mocks": "~1.5.0",
+    "angular-scenario": "1.5.0",
+    "babel-plugin-transform-inline-environment-variables": "^6.5.0",
+    "babel-preset-es2015": "^6.5.0",
+    "babelify": "^7.2.0",
     "browser-sync": "^2.7.1",
-    "browserify": "^12.0.1",
+    "browserify": "^13.0.0",
     "event-stream": "^3.3.0",
     "express": "^4.11.1",
-    "express-cache-response-directive": "^0.2.0",
+    "express-cache-response-directive": "^1.0.0",
     "express-http-proxy": "^0.6.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
@@ -60,8 +62,8 @@
     "mocha-traceur": "^2.1.0",
     "node-notifier": "^4.3.1",
     "rimraf": "^2.3.3",
-    "stringify": "^3.1.0",
-    "traceur": "0.0.92",
+    "stringify": "^3.2.1",
+    "traceur": "0.0.102",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.0"
   },
@@ -81,12 +83,7 @@
   "browserify": {
     "transform": [
       [
-        "babelify",
-        {
-          "optional": [
-            "utility.inlineEnvironmentVariables"
-          ]
-        }
+        "babelify"
       ],
       "stringify"
     ]
