--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ng-csv": "^0.3.6",
     "ng-currency": "solita/ng-currency#v0.8.x",
     "ng-file-upload": "^12.0.1",
+    "ng-tags-input": "^3.0.0",
     "nvd3": "^1.8.2",
     "nya-bootstrap-select": "^2.0.11"
   },
