--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jquery": "^2.2.0",
     "jsdom": "^8.0.2",
     "lodash": "^4.4.0",
+    "moment": "^2.13.0",
     "ng-csv": "^0.3.6",
     "ng-currency": "solita/ng-currency#v0.8.x",
     "ng-file-upload": "^12.0.1",
