--- a/livijuku-front-e2e-tests/pom.xml
+++ b/livijuku-front-e2e-tests/pom.xml
@@ -74,11 +74,16 @@
       <artifactId>httpclient</artifactId>
       <version>4.4.1</version>
     </dependency>
-      <dependency>
-          <groupId>org.apache.pdfbox</groupId>
-          <artifactId>pdfbox</artifactId>
-          <version>1.8.8</version>
-      </dependency>
+    <dependency>
+      <groupId>org.apache.pdfbox</groupId>
+      <artifactId>pdfbox</artifactId>
+      <version>1.8.8</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>1.3.2</version>
+    </dependency>
   </dependencies>
 
 </project>
