--- a/livijuku-front-e2e-tests/pom.xml
+++ b/livijuku-front-e2e-tests/pom.xml
@@ -67,7 +67,7 @@
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
-      <version>[2.37.1,)</version>
+      <version>2.53.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
@@ -80,9 +80,9 @@
       <version>1.8.8</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.commons</groupId>
+      <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>1.3.2</version>
+      <version>2.4</version>
     </dependency>
   </dependencies>
 
