--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babelify": "^7.2.0",
     "browser-sync": "^2.11.1",
     "browserify": "^13.0.0",
+    "debug": "2.6.1",
     "event-stream": "^3.3.2",
     "express": "^4.13.4",
     "express-cache-response-directive": "^1.0.0",
