--- a/package.json
+++ b/package.json
@@ -2,41 +2,41 @@
   "name": "livijukufrontApp",
   "version": "1.7.0",
   "dependencies": {
-    "angular": "^1.5.0",
-    "angular-animate": "^1.5.0",
+    "angular": "^1.7.8",
+    "angular-animate": "^1.7.8",
     "angular-bootstrap-show-errors": "~2.3.0",
     "angular-elastic": "^2.5.1",
-    "angular-i18n": "^1.5.0",
+    "angular-i18n": "^1.7.8",
     "angular-loading-bar": "^0.8.0",
-    "angular-nvd3": "1.0.5",
-    "angular-resource": "^1.5.0",
-    "angular-route": "^1.5.0",
-    "angular-sanitize": "^1.5.0",
-    "angular-smart-table": "^2.1.6",
+    "angular-nvd3": "^1.0.9",
+    "angular-resource": "^1.7.8",
+    "angular-route": "^1.7.8",
+    "angular-sanitize": "^1.7.8",
+    "angular-smart-table": "^2.1.11",
     "angular-toastr": "^1.7.0",
     "angular-ui-bootstrap": "^1.1.2",
-    "angular-ui-router": "^0.2.18",
-    "angular-ui-validate": "^1.2.2",
+    "angular-ui-router": "^1.0.22",
+    "angular-ui-validate": "^1.2.3",
     "angularjs-slider": "^2.11.0",
-    "bluebird": "^3.3.1",
-    "bootstrap": "^3.3.6",
+    "bluebird": "^3.5.5",
+    "bootstrap": "^3.4.1",
     "d3": "^3.5.15",
-    "es5-shim": "^4.5.4",
+    "es5-shim": "^4.5.13",
     "iban": "0.0.6",
     "jquery": "^2.2.0",
     "jsdom": "^8.0.2",
-    "lodash": "^4.4.0",
-    "moment": "^2.13.0",
+    "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "ng-csv": "^0.3.6",
-    "ng-currency": "solita/ng-currency#v0.8.x",
-    "ng-file-upload": "^12.0.1",
-    "ng-tags-input": "^3.0.0",
-    "nvd3": "^1.8.2",
+    "ng-currency": "github:solita/ng-currency#v0.8.x",
+    "ng-file-upload": "^12.2.13",
+    "ng-tags-input": "^3.2.0",
+    "nvd3": "^1.8.6",
     "nya-bootstrap-select": "^2.0.11"
   },
   "devDependencies": {
-    "angular-mocks": "~1.5.0",
-    "angular-scenario": "1.5.0",
+    "angular-mocks": "^1.7.8",
+    "angular-scenario": "^1.7.8",
     "babel-plugin-transform-inline-environment-variables": "^6.5.0",
     "babel-preset-es2015": "^6.5.0",
     "babelify": "^7.2.0",
@@ -68,7 +68,7 @@
     "node-notifier": "^4.5.0",
     "rimraf": "^2.5.2",
     "stringify": "^4.0.1",
-    "traceur": "0.0.102",
+    "traceur": "0.0.111",
     "vinyl-source-stream": "^1.1.0",
     "vis": "^4.15.1",
     "watchify": "^3.7.0"
