--- a/package.json
+++ b/package.json
@@ -31,42 +31,43 @@
     "ng-file-upload": "^12.2.13",
     "ng-tags-input": "^3.2.0",
     "nvd3": "^1.8.6",
-    "nya-bootstrap-select": "^2.0.11"
+    "nya-bootstrap-select": "^2.0.11",
+    "vis": "^4.21.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
     "angular-mocks": "^1.7.8",
     "angular-scenario": "^1.7.8",
     "babel-plugin-transform-inline-environment-variables": "^6.5.0",
-    "babel-preset-es2015": "^6.5.0",
-    "babelify": "^7.2.0",
+    "babelify": "^10.0.0",
     "browser-sync": "^2.11.1",
-    "browserify": "^13.0.0",
-    "debug": "2.6.1",
+    "browserify": "^16.2.3",
+    "debug": "^4.1.1",
     "esm": "^3.2.25",
-    "event-stream": "^3.3.2",
     "express": "^4.13.4",
     "express-cache-response-directive": "^1.0.0",
-    "express-http-proxy": "^0.6.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-inject": "^3.0.0",
-    "gulp-ng-annotate": "^1.1.0",
-    "gulp-replace": "^0.5.4",
-    "gulp-rev": "^7.0.0",
-    "gulp-sourcemaps": "^1.6.0",
+    "express-http-proxy": "^1.5.1",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^6.1.0",
+    "gulp-inject": "^5.0.2",
+    "gulp-ng-annotate": "^2.1.0",
+    "gulp-replace": "^1.0.0",
+    "gulp-rev": "^9.0.0",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-streamify": "1.0.2",
     "gulp-stylus": "^2.3.0",
-    "gulp-uglify": "^1.5.2",
+    "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.7",
     "http-proxy": "^1.13.1",
     "jshint-stylish": "^2.1.0",
     "json3": "^3.3.2",
+    "merge-stream": "^2.0.0",
     "mocha": "^6.1.4",
-    "node-notifier": "^4.5.0",
+    "node-notifier": "^5.4.0",
     "rimraf": "^2.5.2",
-    "stringify": "^4.0.1",
-    "vinyl-source-stream": "^1.1.0",
-    "vis": "^4.15.1",
+    "stringify": "^5.2.0",
+    "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.7.0"
   },
   "engines": {
