--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "livijukufrontApp",
+  "name": "juku-front",
   "version": "1.7.0",
   "dependencies": {
     "angular": "^1.7.8",
@@ -7,24 +7,24 @@
     "angular-bootstrap-show-errors": "~2.3.0",
     "angular-elastic": "^2.5.1",
     "angular-i18n": "^1.7.8",
-    "angular-loading-bar": "^0.8.0",
+    "angular-loading-bar": "^0.9.0",
     "angular-nvd3": "^1.0.9",
     "angular-resource": "^1.7.8",
     "angular-route": "^1.7.8",
     "angular-sanitize": "^1.7.8",
     "angular-smart-table": "^2.1.11",
-    "angular-toastr": "^1.7.0",
-    "angular-ui-bootstrap": "^1.1.2",
+    "angular-toastr": "^2.1.1",
+    "angular-ui-bootstrap": "^2.5.6",
     "angular-ui-router": "^1.0.22",
     "angular-ui-validate": "^1.2.3",
-    "angularjs-slider": "^2.11.0",
+    "angularjs-slider": "^7.0.0",
     "bluebird": "^3.5.5",
     "bootstrap": "^3.4.1",
     "d3": "^3.5.15",
     "es5-shim": "^4.5.13",
     "iban": "0.0.6",
-    "jquery": "^2.2.0",
-    "jsdom": "^8.0.2",
+    "jquery": "^3.4.1",
+    "jsdom": "^15.1.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "ng-csv": "^0.3.6",
