--- a/package.json
+++ b/package.json
@@ -2,30 +2,30 @@
   "name": "juku-front",
   "version": "1.7.2",
   "dependencies": {
-    "angular": "^1.7.8",
-    "angular-animate": "^1.7.8",
+    "angular": "^1.7.9",
+    "angular-animate": "^1.7.9",
     "angular-bootstrap-show-errors": "~2.3.0",
     "angular-elastic": "^2.5.1",
-    "angular-i18n": "^1.7.8",
+    "angular-i18n": "^1.7.9",
     "angular-loading-bar": "^0.9.0",
     "angular-nvd3": "^1.0.9",
-    "angular-resource": "^1.7.8",
-    "angular-route": "^1.7.8",
-    "angular-sanitize": "^1.7.8",
+    "angular-resource": "^1.7.9",
+    "angular-route": "^1.7.9",
+    "angular-sanitize": "^1.7.9",
     "angular-smart-table": "^2.1.11",
     "angular-toastr": "^2.1.1",
     "angular-ui-bootstrap": "^2.5.6",
-    "angular-ui-router": "^1.0.22",
+    "angular-ui-router": "^1.0.23",
     "angular-ui-validate": "^1.2.3",
     "angularjs-slider": "^7.0.0",
-    "bluebird": "^3.5.5",
+    "bluebird": "^3.7.1",
     "bootstrap": "^3.4.1",
     "d3": "^3.5.15",
     "es5-shim": "^4.5.13",
     "iban": "0.0.12",
     "jquery": "^3.4.1",
-    "jsdom": "^15.1.1",
-    "lodash": "^4.17.13",
+    "jsdom": "^15.2.1",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "ng-csv": "^0.3.6",
     "ng-file-upload": "^12.2.13",
@@ -35,22 +35,22 @@
     "vis": "^4.21.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "angular-mocks": "^1.7.8",
-    "angular-scenario": "^1.7.8",
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
+    "angular-mocks": "^1.7.9",
+    "angular-scenario": "^1.7.9",
     "babel-plugin-transform-inline-environment-variables": "^6.5.0",
     "babelify": "^10.0.0",
     "browser-sync": "^2.11.1",
-    "browserify": "^16.2.3",
+    "browserify": "^16.5.0",
     "debug": "^4.1.1",
     "esm": "^3.2.25",
     "express": "^4.13.4",
     "express-cache-response-directive": "^1.0.0",
-    "express-http-proxy": "^1.5.1",
+    "express-http-proxy": "^1.6.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
-    "gulp-inject": "^5.0.2",
+    "gulp-inject": "^5.0.4",
     "gulp-ng-annotate": "^2.1.0",
     "gulp-replace": "^1.0.0",
     "gulp-rev": "^9.0.0",
@@ -59,13 +59,14 @@
     "gulp-stylus": "^2.3.0",
     "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.7",
-    "http-proxy": "^1.13.1",
+    "http-proxy": "^1.18.0",
     "jshint-stylish": "^2.1.0",
     "json3": "^3.3.2",
+    "lodash.template": "^4.5.0",
     "merge-stream": "^2.0.0",
-    "mocha": "^6.1.4",
-    "node-notifier": "^5.4.0",
-    "rimraf": "^2.5.2",
+    "mocha": "^6.2.2",
+    "node-notifier": "^5.4.3",
+    "rimraf": "^2.7.1",
     "stringify": "^5.2.0",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.7.0"
