--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ng-tags-input": "^3.2.0",
     "nvd3": "^1.8.6",
     "nya-bootstrap-select": "^2.0.11",
+    "simplemde": "^1.11.2",
     "vis": "^4.21.0"
   },
   "devDependencies": {
