--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "juku-front",
   "version": "1.7.4",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.0",
     "angular": "^1.7.9",
     "angular-animate": "^1.7.9",
     "angular-bootstrap-show-errors": "~2.3.0",
