--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "juku-front",
-  "version": "1.8.0-SNAPSHOT",
+  "version": "1.8.0",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.0",
     "angular": "^1.7.9",
